[workspace]

members = [
  "crates/*",
]

resolver="2"

[workspace.dependencies]
Inflector = "0.11.4"
assert_approx_eq = "1.1.0"
bitfield = "0.14.0"
cpu-time = "1.0.0"
derivative = "2.2.0"
derive_more = "0.99.17"
function_name = "0.3.0"
log = { version = "0.4.17", features = ["max_level_trace", "release_max_level_warn"] }
pretty_env_logger = "0.4.0"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0"
appleton = { version = "0.1.0", path = "./crates/appleton" }
blackpool = { version = "0.2.0", path = "./crates/blackpool" }
casterlyrock = { version = "0.1.0", path = "./crates/casterlyrock" }
downdelving = { version = "0.1.0", path = "./crates/downdelving" }
dreadfort = { version = "0.1.0", path = "./crates/dreadfort" }
goldengrove = { version = "0.1.0", path = "./crates/goldengrove" }
honeyholt = { version = "0.1.0", path = "./crates/honeyholt" }
kingsgrave = { version = "0.1.0", path = "./crates/kingsgrave" }
lemonwood = { version = "0.1.0", path = "./crates/lemonwood" }
pyke = { version = "0.1.0", path = "./crates/pyke" }
ramsgate = { version = "0.1.0", path = "./crates/ramsgate" }
starfall = { version = "0.1.0", path = "./crates/starfall" }
stonedance = { version = "0.1.0", path = "./crates/stonedance" }
volmark = { version = "0.1.0", path = "./crates/volmark" }
weepingtown = { version = "0.1.0", path = "./crates/weepingtown" }
