[package]
name = "hornvale"
description = "Hornvale is an experimental, idiosyncratic text adventure game written in Rust."
version = "0.1.1"
edition = "2021"
authors = ["Nathan Douglas <github@darkdell.net>"]
license = "Unlicense"
homepage = "https://ndouglas.github.io/hornvale/"
repository = "https://github.com/ndouglas/hornvale/"
documentation = "https://ndouglas.github.io/hornvale/"
readme = "README.md"
keywords = ["hornvale"]
default-run = "hornvale"

[lib]
name = "hornvale"
path = "src/lib.rs"

[[bin]]
name = "hornvale"
path = "src/main.rs"

[[bin]]
name = "blackpool"
path = "src/blackpool.rs"

[dependencies]
Inflector = "0.11.4"
anyhow = "1.0.66"
assert_approx_eq = "1.1.0"
bitfield = "0.14.0"
cpu-time = "1.0.0"
derivative = "2.2.0"
derive_more = "0.99.17"
function_name = "0.3.0"
log = { version = "0.4.17", features = ["max_level_trace", "release_max_level_warn"] }
pretty_env_logger = "0.4.0"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0"
uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics"]}

[dev-dependencies]
bevy_prototype_lyon = "0.4.0"
bevy_fly_camera = "0.8.0"
bevy_pancam = "0.2"
bevy_egui = "0.12"
plotters = "0.3.4"
regex = "1.5.4"
test-generator = "0.3.0"

[dev-dependencies.bevy]
version = "0.6.1"
