[package]
name = "hornvale"
description = "Hornvale is an experimental, idiosyncratic text adventure game written in Rust."
version = "0.1.1"
edition = "2021"
authors = ["Nathan Douglas <github@darkdell.net>"]
license = "Unlicense"
homepage = "https://ndouglas.github.io/hornvale/"
repository = "https://github.com/ndouglas/hornvale/"
documentation = "https://ndouglas.github.io/hornvale/"
readme = "README.md"
keywords = ["hornvale"]
default-run = "hornvale"

[lib]
name = "hornvale"
path = "src/lib.rs"

[[bin]]
name = "hornvale"
path = "src/main.rs"

[[bin]]
name = "blackpool"
path = "src/blackpool.rs"

[[bin]]
name = "parser"
path = "src/parser.rs"

[dependencies]
Inflector = "0.11.4"
anyhow = "1.0.66"
async-std = { version = "1.12.0", features = [ "unstable", "attributes" ] }
assert_approx_eq = "1.1.0"
bitfield = "0.14.0"
colored = "2.0.0"
cpu-time = "1.0.0"
crossterm = { version = "0.24", features = ["event-stream"] }
derivative = "2.2.0"
derive_more = "0.99.17"
futures = "0.3"
function_name = "0.3.0"
glob = "0.3.0"
lazy_static = "1.4.0"
log = { version = "0.4.17", features = ["max_level_trace", "release_max_level_warn"] }
pretty_env_logger = "0.4.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_seeder = "0.2.3"
regex = "1.7.0"
rustyline-async = "0.2.6"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
simplelog = "0.12.0"
specs = { version = "0.18.0", features = ["shred-derive", "specs-derive"] }
specs-derive = "0.4.1"
thiserror = "1.0"
unicode-segmentation = "1.9"
unicode-width = "0.1"
uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics"]}
serde_yaml = "0.9.14"
variation = "0.1.1"

[dev-dependencies]
bevy_prototype_lyon = "0.4.0"
bevy_fly_camera = "0.8.0"
bevy_pancam = "0.2"
bevy_egui = "0.12"
plotters = "0.3.4"
regex = "1.5.4"
test-generator = "0.3.0"

[dev-dependencies.bevy]
version = "0.6.1"
