[package]
name = "goldengrove"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Douglas <github@darkdell.net>"]

[lib]
name = "goldengrove"
path = "src/lib.rs"

[[bin]]
name = "goldengrove"
path = "src/main.rs"

[dependencies]
function_name = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
volmark = { path = "../volmark" }