[package]
name = "ivyhall"
description = "Frontend and connective logic for my Hornvale project."
version = "0.1.0"
edition = "2021"
authors = ["Nathan Douglas <github@darkdell.net>"]
license = "Unlicense"
homepage = "https://ndouglas.github.io/hornvale/"
repository = "https://github.com/ndouglas/hornvale/"
documentation = "https://ndouglas.github.io/hornvale/"
readme = "README.md"
keywords = ["hornvale"]

[lib]
name = "ivyhall"
path = "src/lib.rs"

[[bin]]
name = "ivyhall"
path = "src/main.rs"

[dependencies]
function_name = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
appleton = { path = "../appleton" }
blackpool = { path = "../blackpool" }
casterlyrock = { path = "../casterlyrock" }
dreadfort = { path = "../dreadfort" }
goldengrove = { path = "../goldengrove" }
honeyholt = { path = "../honeyholt" }
kingsgrave = { path = "../kingsgrave" }
lemonwood = { path = "../lemonwood" }
ramsgate = { path = "../ramsgate" }
starfall = { path = "../starfall" }
stonedance = { path = "../stonedance" }
volmark = { path = "../volmark" }
weepingtown = { path = "../weepingtown" }
