[package]
name = "ivyhall"
description = "Frontend and connective logic for my Hornvale project."
version = "0.1.0"
edition = "2021"
authors = ["Nathan Douglas <github@darkdell.net>"]
license = "Unlicense"
homepage = "https://ndouglas.github.io/hornvale/"
repository = "https://github.com/ndouglas/hornvale/"
documentation = "https://ndouglas.github.io/hornvale/"
readme = "README.md"
keywords = ["hornvale"]

[lib]
name = "ivyhall"
path = "src/lib.rs"

[[bin]]
name = "ivyhall"
path = "src/main.rs"

[dependencies]
function_name = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
appleton = { workspace = true }
blackpool = { workspace = true }
casterlyrock = { workspace = true }
dreadfort = { workspace = true }
goldengrove = { workspace = true }
honeyholt = { workspace = true }
kingsgrave = { workspace = true }
lemonwood = { workspace = true }
pyke = { workspace = true }
ramsgate = { workspace = true }
starfall = { workspace = true }
stonedance = { workspace = true }
volmark = { workspace = true }
weepingtown = { workspace = true }
