[package]
name = "kingsgrave"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Douglas <github@darkdell.net>"]

[lib]
name = "kingsgrave"
path = "src/lib.rs"

[[bin]]
name = "kingsgrave"
path = "src/main.rs"

[dependencies]
function_name = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
volmark = { path = "../volmark" }
