[package]
name = "ramsgate"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Douglas <github@darkdell.net>"]

[lib]
name = "ramsgate"
path = "src/lib.rs"

[[bin]]
name = "ramsgate"
path = "src/main.rs"

[dependencies]
function_name = "0.3.0"
log = { version = "0.4.17", features= ["max_level_trace", "release_max_level_warn"] }
pretty_env_logger = "0.4.0"
volmark = { path = "../volmark" }
