[package]
name = "starfall"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Douglas <github@darkdell.net>"]

[lib]
name = "starfall"
path = "src/lib.rs"

[[bin]]
name = "starfall"
path = "src/main.rs"

[dependencies]
Inflector = "0.11.4"
assert_approx_eq = "1.1.0"
function_name = "0.3.0"
log = { version = "0.4.17", features= ["max_level_trace", "release_max_level_warn"] }
pretty_env_logger = "0.4.0"
rand = "0.8.5"
rand_distr = "0.4.3"
volmark = { path = "../volmark" }
honeyholt = { path = "../honeyholt" }

[dev-dependencies]
bevy_prototype_lyon = "0.4.0"
bevy_fly_camera = "0.8.0"
bevy_pancam = "0.2"
bevy_egui = "0.12"
derive_more = "*"
plotters = "*"

[dev-dependencies.bevy]
version = "0.6.1"
