[package]
name = "starfall"
description = "Astronomical sciences, from the galaxy to the moon, for my Hornvale project."
version = "0.1.0"
edition = "2021"
authors = ["Nathan Douglas <github@darkdell.net>"]
license = "Unlicense"
homepage = "https://ndouglas.github.io/hornvale/"
repository = "https://github.com/ndouglas/hornvale/"
documentation = "https://ndouglas.github.io/hornvale/"
readme = "README.md"
keywords = ["hornvale"]

[lib]
name = "starfall"
path = "src/lib.rs"

[[bin]]
name = "starfall"
path = "src/main.rs"

[dependencies]
Inflector = { workspace = true }
assert_approx_eq = { workspace = true }
derive_more = { workspace = true }
function_name = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
thiserror = { workspace = true }
volmark = { workspace = true }
honeyholt = { workspace = true }

[dev-dependencies]
bevy_prototype_lyon = "0.4.0"
bevy_fly_camera = "0.8.0"
bevy_pancam = "0.2"
bevy_egui = "0.12"
plotters = "0.3.4"

[dev-dependencies.bevy]
version = "0.6.1"
