[package]
name = "weepingtown"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Douglas <github@darkdell.net>"]

[lib]
name = "weepingtown"
path = "src/lib.rs"

[[bin]]
name = "weepingtown"
path = "src/main.rs"

[dependencies]
function_name = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
volmark = { path = "../volmark" }
